Update the project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "random-project",
+    "name": "digital-timer",
     "version": "0.0.1",
     "private": true,
     "type": "module",
